--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "clear": "^0.1.0",
     "gatsby": "^4.15.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
