--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "clear": "^0.1.0",
     "gatsby": "^4.15.1",
+    "gatsby-plugin-image": "^2.15.0",
+    "gatsby-plugin-sharp": "^4.15.0",
+    "gatsby-source-filesystem": "^4.15.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   }
