--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "clear": "^0.1.0",
     "gatsby": "^4.15.1",
     "gatsby-plugin-image": "^2.15.0",
+    "gatsby-plugin-mdx": "^3.15.0",
     "gatsby-plugin-sharp": "^4.15.0",
     "gatsby-source-filesystem": "^4.15.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-paypal-express-checkout": "^1.0.5"
   }
 }
